# deposito_pisano

./: .gitignore  README.md
24-09/rag_flow/: application_documentation.md  architettura_crewai.md  data documentation.md  model documentation.md  pyproject.toml
24-09/rag_flow/docs/source/: conf.py  rag_flow.rst
24-09/rag_flow/src/rag_flow/: main.py
24-09/rag_flow/src/rag_flow/crews/rag_crew/: rag_flow_crew.py
24-09/rag_flow/src/rag_flow/crews/rag_crew/config/: agents.yaml  tasks.yaml
24-09/rag_flow/src/rag_flow/crews/research_crew/config/: agents.yaml  tasks.yaml
24-09/rag_flow/src/rag_flow/tools/refactored_faiss_code/: ddgs_scripts.py  main.py  rag_structure.py  streamlit_app.py  utils.py
24-09/rag_flow/src/rag_flow/tools/refactored_faiss_code/docs_test/: aeronautica_guida.md
culinary-project/culinary_flow/: README.md  pyproject.toml
culinary-project/culinary_flow/src/culinary_flow/: interactive_flow.py  main.py  simple_flow.py
culinary-project/culinary_flow/src/culinary_flow/crews/answerer_crew/: answerer_crew.py
culinary-project/culinary_flow/src/culinary_flow/crews/answerer_crew/config/: agents.yaml  tasks.yaml
culinary-project/culinary_flow/src/culinary_flow/crews/culinary_rag_expert_crew/: culinary_rag_expert_crew.py
culinary-project/culinary_flow/src/culinary_flow/crews/evaluate_topic_crew/: evaluate_topic_crew.py
culinary-project/culinary_flow/src/culinary_flow/crews/research_crew/: research_crew.py
culinary-project/culinary_flow/src/culinary_flow/tools/: rag_tool.py
culinary-project/culinary_flow/tests/: test_azure_config.py
(+112 files in other folders)
