[project]
name = "ethical_flow"
version = "0.1.0"
description = "ethical-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
]

[project.scripts]
kickoff = "ethical_flow.main:kickoff"
run_crew = "ethical_flow.main:kickoff"
plot = "ethical_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
